//@xiesong.4.11.2016

syntax = "proto2";

package com.proto.user ;
import "YouMai.Basic.proto";

message User_Login {
	optional int32 user_id = 1;
	optional string device_id = 2;
	optional string phone = 3 ;
	optional string pwd = 4 ;
    optional com.proto.basic.Device_Type device_type = 5;
	optional string session_id = 6;
	optional string appkey = 7;
    optional int32 version=8;
}

message User_Login_Ack {
    optional int32 src_usr_id = 1;
    optional com.proto.basic.ERRNO_CODE errer_no = 2;
    optional int64 msg_id = 3;
    optional string error = 4;
}


message Multi_Device_Kicked_Notify {
	optional int32 timestamp =1;
    optional com.proto.basic.Device_Type new_device = 2 ;
    optional int32 user_id = 3;
	optional string new_device_id = 4 ;
}

message User_LogOff {
	optional int32	user_id = 1;
	optional string	device_id = 2;
}

message User_LogOff_Ack {
	optional int32 src_usr_id = 1;
    optional com.proto.basic.ERRNO_CODE errer_no = 2;
	optional int64 msg_id = 3;
	optional string error = 4;
}



// ************************获取通讯录用户详细信息***************
message RosterInfoReq{
	optional int32  user_id=1;
	repeated string user_phone_list =2;
	optional int32 version=3;   //如果首次上传设为0，对服务器端电话号码进行覆盖 
}

message RosterInfoRsp{
	optional int32     user_id=1;
	repeated  com.proto.basic.UserInfo user_info_list=2;
	optional int32     version=3;
}

// ************************查看用户信息***************
message UserInfoReq{
	optional int32  user_id=1;
}

message UserInfoRsp{
	optional int32	user_id =  1;
	optional string nick_name=2;
	optional string avator=3;
	optional int32  sex=4;
	optional string sign=5;     //个性签名
}

